# media_decoding

./: CMakeLists.txt  main.cpp
cmake/Modules/: FindFFmpeg.cmake
common/include/common/: ByteBuff.hpp  Exceptionator.hpp  LocalFile.hpp  macro_c_extern.hpp
common/src/: ByteBuff.cpp  Exceptionator.cpp  LocalFile.cpp
data_flow/include/data_flow/: Flow.hpp
data_flow/src/: Flow.cpp
desktop_client/: CMakeLists.txt  spreadsheet.qrc
desktop_client/cmake/Modules/: FindBMX.cmake  FindMXF_C.cmake  FindMXF_CPP.cmake  FindMXF_SPEC.cmake  FindMxfSpecificParametersLib.cmake
desktop_client/include/desktop_client/: AllSettingsMxfParametersWidgets.hpp  Cell.hpp  ClientWindow.hpp  CompareRulesWidget.hpp  EnableCheckBox.hpp  ExperimentWindow.hpp  FindDialog.hpp  FormatVersionSettings.hpp  GoToCellDialog.hpp  HexSpinBox.hpp  IconEditor.hpp  LabeledComboBox.hpp  MainWindowSpreadSheet.hpp  MxfSpecMainWindow.hpp  MxfSpecificParameters.hpp  SaveableJSONWidget.hpp  SelectFilesWidget.hpp  SettingsBlockWidget.hpp  SimpleCode.hpp  SortDialog.hpp  SpreadSheet.hpp  StructureSettingsSaver.hpp  checker_mxf_file.hpp
desktop_client/include/desktop_client/blocks_for_settings/: CheckBox.hpp  JSONObjState.hpp  LabeledCheckBox.hpp  LabeledComboBox.hpp  LabeledComparator.hpp  LabeledIntEditLine.hpp  LabeledWidthHeight.hpp
desktop_client/include/desktop_client/settings_widgets/: FormatVersionSettings.hpp  IndexTableValuesSettings.hpp  RIPPresenceSettings.hpp  ResolutionSettings.hpp  VideoLineMapSettings.hpp
desktop_client/include/desktop_client/u_interfaces/: CompareRulesWidget.ui  GoToCellDialog.ui  SelectFilesWidget.ui  SortDialog.ui  SpecificMxfParamters.ui
desktop_client/src/: AllSettingsMxfParametersWidgets.cpp  Cell.cpp  ClientInterface.ui  ClientWindow.cpp  CompareRulesWidget.cpp  EnableCheckBox.cpp  ExperimentWindow.cpp  FindDialog.cpp  FormatVersionSettings.cpp  GoToCellDialog.cpp  HexSpinBox.cpp  IconEditor.cpp  LabeledCheckBox.cpp  LabeledComboBox.cpp  MainWindowSpreadSheet.cpp  MxfSpecMainWindow.cpp  MxfSpecificParameters.cpp  SaveableJSONWidget.cpp  SelectFilesWidget.cpp  SettingsBlockWidget.cpp  SimpleCode.cpp  SortDialog.cpp  SpreadSheet.cpp  StructureSettingsSaver.cpp  cell_check_main.cpp  checker_mxf_file.cpp  main.cpp  main2.cpp  mxf_main.cpp  run_forms_main.cpp  simple_main.cpp
desktop_client/src/blocks_for_settings/: CheckBox.cpp  JSONObjState.cpp  LabeledCheckBox.cpp  LabeledComboBox.cpp  LabeledComparator.cpp  LabeledIntEditLine.cpp  LabeledWidthHeight.cpp
desktop_client/src/settings_widgets/: FormatVersionSettings.cpp  IndexTableValuesSettings.cpp  RIPPresenceSettings.cpp  ResolutionSettings.cpp  VideoLineMapSettings.cpp
docs/: adjust-qt.txt  memories_directives.txt
master_server/: CMakeLists.txt  main.cpp
master_server/master_server/include/master_server/: MasterServer.hpp
master_server/master_server/src/: MasterServer.cpp
master_server/src/: MasterServer.cpp
media_explore/: CMakeLists.txt  MediaExplorer.cpp  MediaExplorer.hpp  media_explore_main.cpp
media_explore/include/: CheckReport.hpp  DurationRule.hpp  MediaExplorer.hpp  MediaSource.hpp  SequenceOfValuesChecker.hpp  ValueCounter.hpp  printable_errors.hpp
media_explore/src/: CheckReport.cpp  DurationRule.cpp  MediaExplorer.cpp  MediaSource.cpp  SequenceOfValuesChecker.cpp  printable_errors.cpp
mxf_exploring/: BERLength.cpp  ContinuityResult.cpp  FileStream.cpp  Hasher.cpp  IndexTableSegment.cpp  KLV.cpp  ObjectsParser.cpp  ParserBCD.cpp  PartOfStream.cpp  Stream.cpp  SystemItem.cpp  TimeCodeStamp.cpp
mxf_exploring/include/mxf_exploring/: BERLength.hpp  ContinuityResult.hpp  FileStream.hpp  Hasher.hpp  IndexTableSegment.hpp  KLV.hpp  ObjectsParser.hpp  ParserBCD.hpp  PartOfStream.hpp  Stream.hpp  SystemItem.hpp  TimeCodeStamp.hpp
scripts/: process_file.py
transcode_audio/: full_code.hpp
transcode_audio/include/transcode_audio/: AddSamplesToFifo.hpp  AudioFrameEncoder.hpp  ConvertSamples.hpp  DecodeAudioFrame.hpp  InitConvertedSamples.hpp  InitFifo.hpp  InitInputFrame.hpp  InitOutputFrame.hpp  InitPacket.hpp  InitResampler.hpp  LoadEncodeAndWrite.hpp  OpenInputFile.hpp  OpenOutputFile.hpp  PatchAvErr2Str.hpp  ReadDecodeConvertAndStore.hpp  WriteOutputFileHeader.hpp  WriteOutputFileTrailer.hpp  run_example.hpp
transcode_audio/src/: AddSamplesToFifo.cpp  AudioFrameEncoder.cpp  ConvertSamples.cpp  DecodeAudioFrame.cpp  InitConvertedSamples.cpp  InitFifo.cpp  InitInputFrame.cpp  InitOutputFrame.cpp  InitPacket.cpp  InitResampler.cpp  LoadEncodeAndWrite.cpp  OpenInputFile.cpp  OpenOutputFile.cpp  ReadDecodeConvertAndStore.cpp  WriteOutputFileHeader.cpp  WriteOutputFileTrailer.cpp  run_example.cpp
ui/: Window.cpp  Window.hpp
ui/ui-interface/: interface.ui
